--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -5,13 +5,12 @@
   <meta charset="UTF-8">
   <title>Weather Journal</title>
   <link href="https://fonts.googleapis.com/css?family=Oswald:400,600,700|Ranga:400,700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <div id="app">
     <div class="holder headline">
-      Weather Journal App
+      CAPSTONE HURENSOHN
     </div>
     <div class="holder zip">
       <label for="zip">Enter Zipcode here</label>
@@ -34,7 +33,7 @@
       </div>
     </div>
   </div>
-  <script src="app.js" type="text/javascript"></script>
+  <script></script>
 
 </body>
 
