Adding APIs testing function

--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -62,7 +62,7 @@ input {
 }
 
 #infobox {
-    overflow: hidden;
+    overflow: scroll;
     width: 250px;
     height: 250px;
     background-color: green;
