JS: adding function to delete button

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -10,33 +10,34 @@
 <body>
 
   <header>
-      <div class="heading">
-        <h1>CAPSTONE Travel App</h1>
-        <img src="" alt="" class="logo"></img>
-      </div>
+    <div class="heading">
+      <h1>CAPSTONE Travel App</h1>
+      <img src="" alt="" class="logo"></img>
+    </div>
   </header>
 
   <main>
     <div class="container">
-        <div class="destination-box">
-          <p>Enter our destination here</p>
-          <input id="destination" type="text" name="destination" value="" placeholder="Your Destination" required>
-        </div>
-        <div class="date-box">
-          <p>Start Date</p>
-          <input id="startDate" type="date" name="startDate" value="" placeholder="mm/dd/yyyy" required>
-          <p>End Date</p>
-          <input id="endDate" type="date" name="endDate" value="" placeholder="mm/dd/yyyy" required>
-        </div>
-        <div class="button-box">
-          <button id="submit" type="submit" name="submit" onclick="return Client.postDestinationDate(event)">Let's go!</button>
-          <button id="deleteTrip" type="button">Delete Trip</button>
-        </div>
+      <div class="destination-box">
+        <p>Enter our destination here</p>
+        <input id="destination" type="text" name="destination" value="" placeholder="Your Destination" required>
       </div>
-      <div class="contentBox">
-        <div id="pixabay">BILD HIER</div>
-        <div id="infobox">INFORMATIONEN</div>
+      <div class="date-box">
+        <p>Start Date</p>
+        <input id="startDate" type="date" name="startDate" value="" placeholder="mm/dd/yyyy" required>
+        <p>End Date</p>
+        <input id="endDate" type="date" name="endDate" value="" placeholder="mm/dd/yyyy" required>
       </div>
+      <div class="button-box">
+        <button id="submit" type="submit" name="submit" onclick="return Client.postDestinationDate(event)">Let's
+          go!</button>
+        <button id="deleteTrip" type="button">Delete Trip</button>
+      </div>
+    </div>
+    <div class="contentBox">
+      <div id="pixabay">PICTURE</div>
+      <div id="infobox">INFORMATIONS</div>
+    </div>
     </div>
   </main>
 
